--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.12"
+    "d3": "^6.2.0",
+    "json-loader": "^0.5.7",
+    "topojson": "^3.0.2",
+    "vue": "^2.6.12",
+    "vuetify": "^2.3.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
